--- a/streaming_app/GAPconfig.json
+++ b/streaming_app/GAPconfig.json
@@ -1,6 +1,6 @@
 {
     "adc_streaming": {
-        "adc_decimation": 16,
+        "adc_decimation": 1,
         "adc_pass_mode": "NET",
         "channel_ac_dc_1": "DC",
         "channel_ac_dc_2": "DC",
@@ -10,7 +10,7 @@
         "channel_attenuator_2": "A_1_1",
         "channel_attenuator_3": "A_1_1",
         "channel_attenuator_4": "A_1_1",
-        "channel_state_1": "OFF",
+        "channel_state_1": "ON",
         "channel_state_2": "ON",
         "channel_state_3": "OFF",
         "channel_state_4": "OFF",
@@ -27,8 +27,8 @@
         "dac_rate": 10000,
         "file_sd": "",
         "file_type_sd": "WAV",
-        "repeat": "DAC_REP_ON",
-        "repeatCount": 15
+        "repeat": "DAC_REP_OFF",
+        "repeatCount": 0
     },
     "memory_manager": {
         "adc_size": 787968,
