added wave high value, low value and starting value in place of amplitude setting. Known issue - at the end of set waveform, output always sets one sample to 0 before looping. Probably not fixable without messing with fpga

--- a/streaming_app/GAPconfig.json
+++ b/streaming_app/GAPconfig.json
@@ -1,6 +1,6 @@
 {
     "adc_streaming": {
-        "adc_decimation": 256,
+        "adc_decimation": 65536,
         "adc_pass_mode": "NET",
         "channel_ac_dc_1": "DC",
         "channel_ac_dc_2": "DC",
@@ -27,7 +27,7 @@
         "dac_rate": 10000,
         "file_sd": "",
         "file_type_sd": "WAV",
-        "repeat": "DAC_REP_OFF",
+        "repeat": "DAC_REP_INF",
         "repeatCount": 0
     },
     "memory_manager": {
